allow mobile homescreen & make targetting work on mobile & fix bullet speed & improve the drop shadow

--- a/src/App.scss
+++ b/src/App.scss
@@ -174,7 +174,7 @@ div.layout {
                 div.info_hover {
                     display: flex;
                     position: absolute;
-                    z-index: 10;
+                    z-index: 120;
                     margin-left: 3rem;
                     background-color: var(--section-color);
                     height: 1rem;
